@@ -1,0 +1,3 @@
+useDynLib(testRcppAttributePackage, .registration=TRUE)
+importFrom(Rcpp, evalCpp)
+exportPattern("^[[:alpha:]]+")
